<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:text="@string/nama"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/textView1"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/nama_nya_apa"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/textView1"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:id="@+id/editText"/>

    <TextView android:layout_width="wrap_content"
              android:text="@string/salary"
              android:layout_marginTop="16dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:id="@+id/salary"
              app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:hint="@string/salarynya_piro"
              app:layout_constraintTop_toBottomOf="@+id/salary"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:id="@+id/editText3"/>

    <TextView android:layout_width="wrap_content"
              android:text="@string/umur"
              android:layout_marginTop="16dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:id="@+id/umur"
              app:layout_constraintTop_toBottomOf="@+id/editText3"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:hint="@string/umur_ne"
              android:id="@+id/umurEdittext"
              app:layout_constraintTop_toBottomOf="@+id/umur"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/umurEdittext"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/button2"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_data"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/btn_lihatData"
            app:layout_constraintHorizontal_bias="0.511"/>


</android.support.constraint.ConstraintLayout>
